[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["figarofuga <61215157+figarofuga@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
seaborn = "^0.12.2"
scikit-learn = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
