[tool.poetry]
name = "touchoku"
version = "0.1.0"
description = "test analysis"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
pandas = "^1.5.2"
openpyxl = "^3.0.10"
matplotlib = "^3.6.2"
seaborn = "^0.12.2"
pulp = "^2.7.0"
ortools = "^9.5.2237"
jupyter = "^1.0.0"
polars = "^0.15.14"
pyarrow = "^10.0.1"
jpholiday = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
